Add link and qr code

--- a/index.html
+++ b/index.html
@@ -176,6 +176,13 @@
         <h1>¿Preguntas?</h1>
         <img class="fragment" src="img/ask.jpg">
       </section>
+      <section>
+        <h1>Go!</h1>
+        <img src="img/qr.png" style="max-width: 300px;">
+        <p>
+          <a href="http://acm.luisreys.com/">acm.luisreys.com</a>
+        </p>
+      </section>
     </div>
   </div>
 
